# homunculus

./: .clang-format  .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  homunculus.pro  main.cpp
.github/workflows/: ubuntu-gcc-10-release.yml
assets/: some_dialog.xml  test.txt
common/: CMakeLists.txt  bitview.cpp  bitview.h  common.cpp  common.h  concepts_ext.h  err_t.cpp  err_t.h  file_utils.cpp  file_utils.h  signal.h  string_converters.cpp  string_converters.h  string_utils.h  thread_info.cpp  thread_info.h  thread_sync.cpp  thread_sync.h  type_traits_ext.h
common/logger/: logger.cpp  logger.h  logger_utils.cpp  logger_utils.h
common/string/: string_converters.cpp  string_converters.h  string_utils.cpp  string_utils.h
common/template_tricks/: auto_register.h  comparator.h  has_member.h  static_for.h  string_literal.h
control_flow/: CMakeLists.txt  control_flow.cpp  control_flow.h  frame_manager.cpp  frame_manager.h  handle_gui_events.cpp  handle_gui_events.h  make_gui_content.cpp  make_gui_content.h  request_to_calc.cpp  request_to_calc.h  request_to_gui.cpp  request_to_gui.h  run_calc_thread.cpp  run_calc_thread.h
datastructs/: CMakeLists.txt  animation.h  camera_data_t.cpp  camera_data_t.h  dialog.cpp  dialog.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  plot_tag.cpp  plot_tag.h  renderable_object.cpp  renderable_object.h  shader.cpp  shader.h  shader_property.cpp  shader_property.h  texture.cpp  texture.h  vertex_data.cpp
datastructs/helpers/: saveload_rules_extensions.h
datastructs/io/: model_obj.cpp  tga_image.cpp  tga_image.h
engine/: CMakeLists.txt  engine.cpp  engine.h  event.cpp  event.h  logger.cpp  logger.h  logger_utils.cpp  logger_utils.h
engine/gui/: CMakeLists.txt  gui_context.cpp  gui_context.h  gui_element.cpp  gui_element.h  gui_interactive_element.cpp  gui_interactive_element.h  gui_system.cpp  gui_system.h  gui_text.cpp  gui_text.h  gui_textline.cpp  gui_textline.h
engine/gui/widgets/: gui_element.h  gui_interactive_element.cpp  gui_interactive_element.h  gui_textline.cpp  gui_textline.h
engine/io/: io_utils.cpp  io_utils.h  model_obj.cpp  model_obj.h  resource_manager.cpp  resource_manager.h  tga_image.cpp  tga_image.h
engine/renderer/: CMakeLists.txt  camera.cpp  camera.h  font.cpp  font.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  renderer_type.cpp  renderer_type.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_fwd.h  texture.h  vertex_data.cpp  vertex_data.h
engine/renderer/gl/: gl_ext.cpp  gl_ext.h
engine/thread/: thread_manager.cpp  thread_manager.h
game/: CMakeLists.txt  game.cpp  game.h  game_settings.cpp  game_settings.h
gamedata/assets/: some_dialog.xml  test.xml
gamedata/models/: cube.mtl  cube.tga  triangle.mtl  triangle.tga
gamedata/saved_game/test_story/initial_state/: example_level_2.xml  meta_info.xml  player.xml
gamedata/saved_game/test_story/initial_state_con/: example_level_2.xml  meta_info.xml
gamedata/shaders/: default.vert  test.shader  test.vert  test_simple.frag  text.frag  text.shader  text.vert
gamedata/textures/: 64x64.tga  cube.tga  cube_friend.tga
logic/: action.cpp  action.h  asset.h  dialog.cpp  dialog.h  logic_tests.h  object_heap_test.cpp  plot_tag.h  resource_manager.h  saveload.h  saveload_tree.cpp  saveload_tree.h  saveload_tree_test.cpp  saveload_tree_test.h  world.cpp  world.h
logic/object/: interaction.h  object.h  object_base.h  object_heap.cpp  object_heap.h
logic/object_classes/: enemy.h  example_classes.h  friend.cpp  friend.h  player.h
logic/policies/: choose_action_policy.cpp  coordinates_policy.h  get_text_for_gui_policy.cpp  get_text_for_gui_policy.h  health_policy.h  name_policy.h  player_choose_action_policy.cpp  player_choose_action_policy.h  plot_tags_policy.h  talk_policy.cpp  talk_policy.h
logic/policies/example/: health_policy.h  name_policy.h  talk_policy.h
logic/saveload/: saveload.h  saveload_fwd.h  saveload_rules.h  saveload_tree.cpp  saveload_tree.h  saveload_tree_fwd.h
logic/simulation/: simulation.cpp  simulation_helpers.h
logic/tests/: asset_test.cpp  logic_tests.h  object_heap_test.cpp  plot_tag_set_test.cpp  saveload_tree_test.cpp
math/: basic_math.h  quaternion.h  vec.h  vector_math.h
object/: CMakeLists.txt  object.h  object_base.h  object_heap.cpp  object_heap.h
objects/helpers/: saveload_rules_extensions.h
objects/object_classes/: enemy.h  example_classes.h  friend.h  player.h
objects/policies/: camera_policy.cpp  camera_policy.h  choose_action_policy.h  coordinates_policy.cpp  coordinates_policy.h  get_text_for_gui_policy.h  health_policy.h  name_policy.h  player_choose_action_policy.h  plot_tags_policy.cpp  plot_tags_policy.h  talk_policy.cpp  talk_policy.h
resource/: CMakeLists.txt  asset.h  resource_manager.cpp  resource_manager.h
resource/saveload/: saveload.h  saveload_default_helpers.cpp  saveload_default_helpers.h  saveload_detail_typedefs.h  saveload_fwd.h  saveload_rules.h  saveload_tree.cpp  saveload_tree.h
saved_game/test_story/initial_state/: player.xml
tests/: CMakeLists.txt  asset_test.cpp  homunculus_tests.cpp  logic_tests.h  object_heap_test.cpp  plot_tag_set_test.cpp  saveload_tree_test.cpp
tests/simulation/: simulation.cpp  simulation.h
utils/: CMakeLists.txt
utils/model_compiler/: CMakeLists.txt  model_compiler.cpp
utils/tests/: asset_test.cpp  logic_tests.h
utils/tests/simulation/: simulation.cpp  simulation_helpers.cpp
world/: CMakeLists.txt  action.cpp  action.h  world.cpp  world.h
world/classes/: dialog_partner.cpp  dialog_partner.h  enemy.h  example_classes.cpp  example_classes.h  friend.h  player.h
world/policies/: camera_policy.h  choose_action_policy.h  get_focus_policy.cpp  get_focus_policy.h  get_text_for_gui_policy.h  health_policy.h  mesh_policy.cpp  mesh_policy.h  name_policy.h  player_choose_action_policy.h  plot_tags_policy.h  position_policy.cpp  position_policy.h  shader_policy.cpp  shader_policy.h  talk_policy.cpp  talk_policy.h  texture_policy.cpp  texture_policy.h
(+3 files in other folders)
